<resources>
    <string name="app_name">VetShop</string>
    <string name="vetshop">VETSHOP</string>
    <string name="dokter_hewan">Dokter Hewan</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="perlengkapan_hewan">Perlengkapan Hewan</string>
    <string name="masuk">MASUK</string>
    <string name="password">Password</string>
    <string name="daftar">DAFTAR</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="nama_dokter">Nama Dokter</string>
    <string name="alamat">Alamat</string>
    <string name="home">HOME</string>
    <string name="halo_user">Halo, User!</string>
    <string name="temukan_yang_kamu_cari_disini">Temukan yang kamu cari disini!</string>
    <string name="konsultasi_ndokter_nhewan">Konsultasi\nDokter\nHewan</string>
    <string name="jasa_nsalon_nhewan">Jasa\nSalon\nHewan</string>
    <string name="jasa_ntitip_nhewan">Jasa\nTitip\nHewan</string>
    <string name="promo_dan_penawaran_menarik">Promo dan penawaran menarik!</string>
    <string name="home_promo_desc">Setiap transaksi pembelian barang pada VetShop dengan\nminimal transaksi sebesar Rp.50000 berhak mendapatkan\nongkir gratis. (Max. Rp.20000)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">BACK</string>
    <string name="list_konsultasi">KONSULTASI DENGAN DOKTER</string>
    <string name="list_konsultasi_desc">Temukan dokter terbaik untuk hewan\nkesayangan anda.</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="alamat_lengkap_desc">Alamat Lengkap Desc</string>
    <string name="jam_praktek">Jam Praktek</string>
    <string name="jam_praktek_desc">Jam Praktek Desc</string>
    <string name="biaya_konsultasi">Biaya Konsultasi</string>
    <string name="biaya_konsultasi_desc">Biaya Konsultasi Desc</string>
    <string name="info_tambahan">Info Tambahan</string>
    <string name="info_tambahan_desc">Info Tambahan Desc</string>
    <string name="hubungi_via_whatsapp">HUBUNGI VIA WHATSAPP</string>
    <string name="shop">SHOP</string>
    <string name="promo_hari_ini">Promo Hari Ini!</string>
    <string name="kategori">KATEGORI</string>
    <string name="obat_nhewan">Obat\nHewan</string>
    <string name="makanan_nhewan">Makanan\nHewan</string>
    <string name="mainan_nhewan">Mainan\nHewan</string>
    <string name="rumah_nhewan">Rumah\nHewan</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="harga">Harga</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="beli">BELI</string>
    <string name="stock">Stock</string>
    <string name="stock_barang">Stock Barang</string>
    <string name="profile">PROFILE</string>
    <string name="nama_user">Nama User</string>
    <string name="telefon_user">Telefon User</string>
    <string name="email_user">Email User</string>
    <string name="free">FREE</string>
    <string name="pengaturan_profil">PENGATURAN PROFIL</string>
    <string name="ubah_nama_email_password">Ubah Nama, Email, Password.</string>
    <string name="keluar">KELUAR</string>
    <string name="keluar_akun">Keluar Akun.</string>
    <string name="gabung_vetshop">GABUNG VETSHOP</string>
    <string name="pendaftaran_mitra_vetshop">Pendaftaran mitra VetShop.</string>
    <string name="pendaftaran_mitra">PENDAFTARAN MITRA</string>
    <string name="pendaftaran_berhasil">PENDAFTARAN BERHASIL</string>
    <string name="selesai">SELESAI</string>
    <string name="jual_barang">JUAL BARANG</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="deskripsi_barang">Deskripsi Barang</string>
    <string name="jual">JUAL</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="kategori_barang">Kategori Barang</string>
    <string name="simpan_gambar">SIMPAN GAMBAR</string>
    <string name="posting_berhasil">POSTING BERHASIL</string>
    <string name="makanan_hewan">MAKANAN HEWAN</string>
    <string name="obat_hewan">OBAT HEWAN</string>
    <string name="mainan_hewan">MAINAN HEWAN</string>
    <string name="rumah_hewan">RUMAH HEWAN</string>
</resources>
