<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shop.Makanan.DetilMakanan"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/detm_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/detm_back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/back"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/detm_back_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/detm_pic"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_promo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detm_back_text"
        app:riv_border_color="@color/colorPrimaryDark"
        app:riv_border_width="1dp"
        app:riv_corner_radius="20dip"
        app:riv_mutate_background="true"
        app:riv_oval="false"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/detm_nama_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/nama_produk"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detm_pic" />

    <TextView
        android:id="@+id/detm_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nama_barang"
        android:textColor="@color/colorPrimarySoft"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detm_nama_title" />

    <TextView
        android:id="@+id/detm_harga_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/harga"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detm_nama" />

    <TextView
        android:id="@+id/detm_harga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/harga_barang"
        android:textColor="@color/colorPrimarySoft"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detm_harga_title" />

    <TextView
        android:id="@+id/detm_desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/deskripsi"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detm_harga" />

    <TextView
        android:id="@+id/detm_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/roboto"
        android:text="@string/deskripsi_barang"
        android:textColor="@color/colorPrimarySoft"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detm_desc_title" />

    <Button
        android:id="@+id/detm_button_buy"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_button_primary"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/beli"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/detm_button_cart"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_button_secondary"
        android:drawableTop="@drawable/ic_shopdet_cart"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>