<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Shop.ShopDetail"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/shopdet_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/shopdet_back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/back"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/shopdet_back_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/shopdet_picholder"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape_rectangle_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopdet_back_text">

        <ImageView
            android:id="@+id/shopdet_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:srcCompat="@drawable/ic_shop_promo1" />
    </RelativeLayout>

    <TextView
        android:id="@+id/shopdet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/nama_produk"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopdet_picholder" />

    <TextView
        android:id="@+id/shopdet_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/harga"
        android:textColor="@color/colorPrimarySoft"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopdet_title" />

    <TextView
        android:id="@+id/shopdet_desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/deskripsi"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopdet_price" />

    <TextView
        android:id="@+id/shopdet_desc_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/roboto"
        android:text="@string/deskripsi_barang"
        android:textColor="@color/colorPrimarySoft"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopdet_desc_title" />

    <TextView
        android:id="@+id/shopdet_stock_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/stock"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopdet_desc_desc" />

    <TextView
        android:id="@+id/shopdet_stock_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:fontFamily="@font/roboto"
        android:text="@string/stock_barang"
        android:textColor="@color/colorPrimarySoft"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopdet_stock_title" />

    <Button
        android:id="@+id/shopdet_button_buy"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_button_primary"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/beli"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/shopdet_button_cart"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_button_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableTop="@drawable/ic_shopdet_cart"
        android:padding="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>