<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Register"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/register_pic"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_register"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/register_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/register_back_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/back"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/register_back_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/daftar"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/register_email"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_rectangle_white"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:text="@string/email"
        android:textColor="@color/colorPrimarySoft"
        app:layout_constraintBottom_toTopOf="@+id/register_nomor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/register_nomor"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_rectangle_white"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:text="@string/nomor_handphone"
        android:textColor="@color/colorPrimarySoft"
        app:layout_constraintBottom_toTopOf="@+id/register_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/shape_rectangle_white"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:text="@string/username"
        android:textColor="@color/colorPrimarySoft"
        app:layout_constraintBottom_toTopOf="@+id/register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_rectangle_white"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:text="@string/password"
        android:textColor="@color/colorPrimarySoft"
        app:layout_constraintBottom_toTopOf="@+id/register_masuk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/register_masuk"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_button_primary"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/daftar"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>